<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GestionarActivity"
    android:id="@+id/drawerLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/toolbar" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:gravity="center_horizontal"
                android:text="Gestionar libro"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="108dp"
                android:text="@string/str_titulo"
                app:layout_constraintBottom_toTopOf="@+id/ges_txtTitulo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include4"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/ges_txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="184dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="name"
                android:background="@drawable/list_borders"
                android:hint="@string/str_hintTitulo"
                android:inputType="text"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="324dp"
                android:text="@string/str_isbn"
                app:layout_constraintBottom_toTopOf="@+id/ges_txtIsbn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include4"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/ges_txtIsbn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="416dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/list_borders"
                android:hint="@string/str_hintIsbn"
                android:inputType="text"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="108dp"
                android:text="@string/str_autor"
                app:layout_constraintBottom_toTopOf="@+id/ges_txtAutor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include4"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/ges_txtAutor"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="296dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/list_borders"
                android:hint="@string/str_hintAutor"
                android:inputType="text"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="204dp"
                android:text="@string/str_materia"
                app:layout_constraintBottom_toTopOf="@+id/ges_txtMateria"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include4"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/ges_txtMateria"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="524dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/list_borders"
                android:hint="@string/str_hintMateria"
                android:inputType="text"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="204dp"
                android:text="@string/str_curso"
                app:layout_constraintBottom_toTopOf="@+id/ges_txtCurso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include4"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/ges_txtCurso"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="768dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/list_borders"
                android:hint="@string/str_hintCurso"
                android:inputType="text"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="204dp"
                android:text="@string/str_anio_publicacion"
                app:layout_constraintBottom_toTopOf="@+id/ges_txtAnioPublicacion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include4"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/ges_txtAnioPublicacion"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="644dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/list_borders"
                android:hint="@string/str_hintAnioPublicacion"
                android:inputType="number"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="204dp"
                android:text="@string/str_danio"
                app:layout_constraintBottom_toTopOf="@+id/ges_txtDanio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include4"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/ges_txtDanio"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="884dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/list_borders"
                android:hint="@string/str_hintDanio"
                android:inputType="numberDecimal"
                android:paddingStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="41dp"
                android:text="Estado"
                app:layout_constraintBottom_toTopOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ges_txtDanio"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/ges_btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="61dp"
                android:layout_marginBottom="32dp"
                android:text="@string/btn_borrar"
                app:backgroundTint="@drawable/button_color"
                android:textColor="@drawable/button_text"
                app:layout_constraintBottom_toTopOf="@+id/ges_btnVolver"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ges_fotoFinal" />

            <Button
                android:id="@+id/ges_btnActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="61dp"
                android:layout_marginEnd="30dp"
                android:text="@string/btn_actualizar"
                app:backgroundTint="@drawable/button_color"
                android:textColor="@drawable/button_text"
                app:layout_constraintBottom_toTopOf="@+id/ges_btnVolver"
                app:layout_constraintEnd_toStartOf="@+id/ges_btnGuardar"
                app:layout_constraintStart_toEndOf="@+id/ges_btnBorrar"
                app:layout_constraintTop_toBottomOf="@+id/ges_fotoFinal" />

            <Button
                android:id="@+id/ges_btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="61dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="@string/btn_guardar"
                app:backgroundTint="@drawable/button_color"
                android:textColor="@drawable/button_text"
                app:layout_constraintBottom_toTopOf="@+id/ges_btnVolver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ges_fotoFinal"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/ges_fotoFinal"
                android:layout_width="190dp"
                android:layout_height="182dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="111dp"
                android:background="@drawable/list_borders"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ges_Estado"
                app:srcCompat="@drawable/logo" />

            <Button
                android:id="@+id/ges_btnVolver"
                android:layout_width="111dp"
                android:layout_height="50dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="153dp"
                android:layout_marginBottom="16dp"
                android:text="Volver"
                app:backgroundTint="@drawable/button_color"
                android:textColor="@drawable/button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ges_btnActualizar" />

            <Spinner
                android:id="@+id/ges_Estado"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="62dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/searchbar"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ges_txtDanio" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include layout="@layout/nav_drawer"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>