<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibroActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <include
          android:id="@+id/include5"
          layout="@layout/toolbar" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="92dp"
          android:gravity="center_horizontal"
          android:text="Datos libro"
          android:textAlignment="center"
          android:textColor="#3F51B5"
          android:textSize="24sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="108dp"
          android:text="@string/str_titulo"
          app:layout_constraintBottom_toTopOf="@+id/lib_txtTitulo"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/include5"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/lib_txtTitulo"
          android:layout_width="match_parent"
          android:layout_height="56dp"
          android:layout_marginTop="184dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:autofillHints="name"
          android:text="@string/str_hintTitulo"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="324dp"
          android:text="@string/str_isbn"
          app:layout_constraintBottom_toTopOf="@+id/lib_txtIsbn"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/include5"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/lib_txtIsbn"
          android:layout_width="match_parent"
          android:layout_height="56dp"
          android:layout_marginTop="416dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:text="@string/str_hintIsbn"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="108dp"
          android:text="@string/str_autor"
          app:layout_constraintBottom_toTopOf="@+id/lib_txtAutor"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/include5"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/lib_txtAutor"
          android:layout_width="match_parent"
          android:layout_height="56dp"
          android:layout_marginTop="296dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:text="@string/str_hintAutor"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="204dp"
          android:text="@string/str_materia"
          app:layout_constraintBottom_toTopOf="@+id/lib_txtMateria"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/include5"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/lib_txtMateria"
          android:layout_width="match_parent"
          android:layout_height="63dp"
          android:layout_marginTop="524dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:text="@string/str_hintMateria"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="204dp"
          android:text="@string/str_curso"
          app:layout_constraintBottom_toTopOf="@+id/lib_txtCurso"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/include5"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/lib_txtCurso"
          android:layout_width="match_parent"
          android:layout_height="63dp"
          android:layout_marginTop="768dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:text="@string/str_hintCurso"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="204dp"
          android:text="@string/str_anio_publicacion"
          app:layout_constraintBottom_toTopOf="@+id/lib_txtAnioPublicacion"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/include5"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/lib_txtAnioPublicacion"
          android:layout_width="match_parent"
          android:layout_height="63dp"
          android:layout_marginTop="644dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:text="@string/str_hintAnioPublicacion"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="204dp"
          android:text="@string/str_danio"
          app:layout_constraintBottom_toTopOf="@+id/lib_txtDanio"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/include5"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/lib_txtDanio"
          android:layout_width="match_parent"
          android:layout_height="63dp"
          android:layout_marginTop="884dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:text="@string/str_hintDanio"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="48dp"
          android:text="Estado"
          app:layout_constraintBottom_toTopOf="@+id/lib_txtEstado"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/lib_txtDanio" />

      <TextView
          android:id="@+id/lib_txtEstado"
          android:layout_width="match_parent"
          android:layout_height="58dp"
          android:layout_marginTop="68dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:text="Estado"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/lib_txtDanio" />

      <Button
          android:id="@+id/lib_btnDevolver"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="54dp"
          android:layout_marginBottom="80dp"
          android:text="Devolver"
          android:textColor="@drawable/button_text"
          app:backgroundTint="@drawable/button_color"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/lib_btnSacar"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/lib_fotoFinal"
          app:layout_constraintVertical_bias="0.52" />

      <Button
          android:id="@+id/lib_btnSacar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="54dp"
          android:layout_marginEnd="32dp"
          android:layout_marginBottom="80dp"
          android:text="Tomar prestado"
          android:textColor="@drawable/button_text"
          app:backgroundTint="@drawable/button_color"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/lib_fotoFinal"
          app:layout_constraintVertical_bias="0.0" />

      <ImageView
          android:id="@+id/lib_fotoFinal"
          android:layout_width="190dp"
          android:layout_height="182dp"
          android:layout_marginTop="71dp"
          android:background="@drawable/list_borders"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/lib_txtEstado"
          app:srcCompat="@drawable/logo" />

      <Button
          android:id="@+id/lib_btnVolver"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="114dp"
          android:layout_marginBottom="20dp"
          android:text="Volver"
          app:backgroundTint="#016DB5"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/lib_fotoFinal"
          app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

  <RelativeLayout
      android:layout_width="300dp"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:background="@color/white">

    <include layout="@layout/nav_drawer" />
  </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>