<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_borders">

            <ImageView
                android:id="@+id/fotoLista"
                android:layout_width="129dp"
                android:layout_height="138dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/searchbar"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/fotoLista"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/fotoLista"
                android:layout_toRightOf="@+id/fotoLista"
                android:text="@string/str_titulo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textTitulo"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/fotoLista"
                android:layout_toRightOf="@+id/fotoLista"
                android:text="@string/str_autor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textISBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAutor"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/fotoLista"
                android:layout_toRightOf="@+id/fotoLista"
                android:background="#3749DD"
                android:text="@string/str_isbn"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/btn_List"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="52dp"
                android:layout_marginRight="10dp"
                android:contentDescription="ad"
                app:srcCompat="@drawable/ic_flechalista" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>